added gofr
